# prom_prog

BashTasks/DiskUsage/: script.awk  script.sh
BashTasks/JsonData/: get_categories_with_atleast_size.sh  get_images_by_category.sh  get_images_by_size.sh
BashTasks/MapReduceAwk/: reduce.awk  script.sh
BashTasks/Parallel/: script.sh  testdata
BashTasks/TrainValSplit/: script.sh
BuildTasks/CMake1/: CMakeLists.txt
BuildTasks/CMake1/A/: preparing.py
BuildTasks/CMake1/B/: CMakeLists.txt  lib.hpp
BuildTasks/CMake1/C/: main.cpp  main.hpp  main_test.cpp
BuildTasks/CodeGen/: CMakeLists.txt  codegen.cpp  generate_header.py  opencv.cpp
BuildTasks/CrossCompile/TechProgSimpleLibrary/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
BuildTasks/CrossCompile/TechProgSimpleLibrary/src/: Makefile  cmake_install.cmake
BuildTasks/EnvTask/: EnvInstall.txt
BuildTasks/GradleBuild/: .gitignore  settings.gradle
BuildTasks/GradleBuild/AbstractFactory/cpp-source/lib/: build.gradle
BuildTasks/GradleBuild/AbstractFactory/cpp-source/lib/src/main/cpp/: BasementFactory.cpp  BasementHardRoom.cpp  CavesFactory.cpp  HardRoom.cpp  RoomSerializer.cpp
BuildTasks/GradleBuild/AbstractFactory/cpp-source/lib/src/main/public/: RoomFactory.h
BuildTasks/GradleBuild/AbstractFactory/cpp-source/main/src/main/cpp/: main.cpp
BuildTasks/GradleBuild/AbstractFactory/cpp-source/main_serializers/: build.gradle
BuildTasks/GradleBuild/Adapter/cpp-source/: build.gradle
BuildTasks/GradleBuild/Adapter/cpp-source/src/main/cpp/: JsonStorage.cpp
BuildTasks/GradleBuild/Bridge/cpp-source/src/main/cpp/axles/: CarAxle.cpp
BuildTasks/GradleBuild/Builder/cpp-source/lib/: build.gradle
BuildTasks/GradleBuild/Builder/cpp-source/lib/src/main/cpp/: Burger.cpp  BurgerBuilder.cpp  Chef.cpp  HamburgerBuilder.cpp  VegiburgerBuilder.cpp
BuildTasks/GradleBuild/Builder/cpp-source/lib/src/main/public/: BurgerBuilder.h  Chef.h  HamburgerBuilder.h  VegiburgerBuilder.h
BuildTasks/GradleBuild/Builder/cpp-source/lulkek/: build.gradle
BuildTasks/GradleBuild/Builder/cpp-source/lulkek/src/main/cpp/: main.cpp
BuildTasks/GradleBuild/ChainResponsibility/cpp-source/: CMakeLists.txt
BuildTasks/GradleBuild/ChainResponsibility/cpp-source/src/main/cpp/: BaseHandler.cpp  DivisionZeroHandler.cpp  FileHandler.cpp  LogLevel.cpp  LoggingHandler.cpp  StderrHandler.cpp  main.cpp
BuildTasks/GradleBuild/Command/cpp-source/: CMakeLists.txt  build.gradle
BuildTasks/GradleBuild/Command/cpp-source/src/main/cpp/: main.cpp
BuildTasks/GradleBuild/Command/cpp-source/src/main/headers/: CreateCocktailCommand.h  CreateSoupCommand.h  Waiter.h
BuildTasks/GradleBuild/Composite/cpp-source/src/main/cpp/: DishComponent.cpp
BuildTasks/GradleBuild/Decorator/cpp-source/: build.gradle
BuildTasks/GradleBuild/Decorator/cpp-source/src/main/headers/: EmailNotifier.h  TgNotifier.h
BuildTasks/GradleBuild/Facade/cpp-source/: build.gradle
BuildTasks/GradleBuild/Facade/cpp-source/src/main/cpp/: BurgerFacade.cpp  BurgerFacade.h  IsaacFacade.cpp  IsaacFacade.h  main.cpp
BuildTasks/GradleBuild/FactoryMethod/cpp-source/src/main/cpp/: Hub.cpp  WifiRouter.cpp  main.cpp
BuildTasks/GradleBuild/FactoryMethod/cpp-source/src/main/headers/: Hub.h  Router.h  WifiRouter.h
BuildTasks/GradleBuild/Mediator/cpp-source/src/main/cpp/: Plane.cpp  main.cpp
BuildTasks/GradleBuild/Mediator/cpp-source/src/main/headers/: Dispatcher.h  PlaneDispatcher.h
BuildTasks/GradleBuild/State/cpp-source/: build.gradle
BuildTasks/GradleBuild/State/cpp-source/src/main/cpp/: Red.cpp  TrafficLight.cpp  Yellow.cpp
BuildTasks/GradleBuild/State/cpp-source/src/main/headers/: TrafficLight.h
BuildTasks/GradleBuild/State/cpp-source/src/mainn/cpp/: Green.cpp
BuildTasks/GradleBuild/Visitor/cpp-source/src/main/cpp/: LivingRoom.cpp  Painter.cpp  SanTech.cpp  Tiler.cpp  Windower.cpp  main.cpp
BuildTasks/GradleBuild/Visitor/cpp-source/src/main/headers/: ElementRoom.h  LivingRoom.h  Painter.h  Tiler.h
Testing/FrontTest/: pom.xml
Testing/FrontTest/src/main/java/ru/fivt/dostavimvse/: OptimalPriceSolver.java  OptimalTimeSolver.java
Testing/FrontTest/src/main/resources/: application.properties  hibernate.cfg.xml
Testing/FrontTest/src/test/: test1.drawio
Testing/FrontTest/src/test/java/ru/fivt/dostavimvse/: BaseBackendTest.java  DostavimvseApplicationTests.java  FrontendTest.java  SolverTests.java
Testing/FrontTest/src/test/resources/: hibernate.cfg.xml  selenium.properties
Testing/UnitMock/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp
Testing/UnitMock/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
Testing/UnitMock/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
(+2 files in other folders)
